Add named loops to the symbol list

--- a/Preferences/Symbol List.yaml
+++ b/Preferences/Symbol List.yaml
@@ -1,7 +1,7 @@
 # [PackageDev] target_format: plist, ext: tmPreferences
 ---
 name: Symbol List
-scope: source.natural definition.view.natural
+scope: source.natural definition.view.natural, source.natural entity.name.tag.natural
 uuid: E74BF5AD-F74B-49C0-AD81-346376D19665
 settings:
   showInSymbolList: 1
